--- a/geozilla/geozilla-react/src/components/MapViewer.css
+++ b/geozilla/geozilla-react/src/components/MapViewer.css
@@ -22,3 +22,11 @@
     background: #555; /* Цвет ползунка при наведении */
 
 }
+
+.layer-highlight {
+    stroke: #3388ff; /* Цвет обводки для подсветки слоя */
+    stroke-width: 3px; /* Ширина обводки */
+    fill: none; /* Без заливки */
+    pointer-events: none; /* Отключаем взаимодействие с элементом через указатель */
+}
+
